WIP: Reimplement billing API with oapi-codegen
